# aries-socketdock

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  MAINTAINERS.md  README.md  docker-compose-local.yaml  docker-compose.yaml  pyproject.toml  setup.cfg  socket_client.py  socketdock.py  wait-for-tunnel.sh
.github/: dependabot.yml
.github/workflows/: code-quality-check.yml  publish-image.yml
demo/: docker-compose-local.yaml  docker-compose.yaml  socket_client.py  wait-for-tunnel.sh
locust/: Dockerfile  api.py  docker-compose.yaml  locustClient.py  locustfile.py  pyproject.toml
server/: backend.py  httpbackend.py  socketdock.py  testbackend.py
socketdock/: __init__.py  __main__.py  api.py  backend.py  httpbackend.py  testbackend.py
