[tool.poetry]
name = "socketdock"
version = "0.1.0a0"
description = "Websocket relay service for use with clustered mediators"
authors = [
	"Sam Curren <telegramsam@gmail.com>",
	"Colton Wolkins (Indicio work address) <colton@indicio.tech>",
    "Micah Peltier <micah@indicio.tech>",
    "Daniel Bluhm <dbluhm@pm.me>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
aiohttp = "^3.8.4"
sanic = "^22.12.0"

[tool.poetry.group.dev.dependencies]
websocket = "^0.2.1"
black = "^22"
flake8 = "^5"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
