[tool.poetry]
name = "socketdock"
version = "0.1.0a0"
description = "Websocket relay service for use with clustered mediators"
authors = [
	"Sam Curren <telegramsam@gmail.com>",
	"Colton Wolkins (Indicio work address) <colton@indicio.tech>",
	"Micah Peltier <micah@indicio.tech>",
	"Daniel Bluhm <dbluhm@pm.me>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
aiohttp = "^3.9.4"
sanic = "^22.12.0"

[tool.poetry.group.dev.dependencies]
websocket = "^0.2.1"
ruff = "^0.4.3"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 90
extend-exclude = ["locust"]

[tool.ruff.lint]
select = ["E", "F", "C", "D"]
ignore = [
    # Google Python Doc Style
    "D203", "D204", "D213", "D215", "D400", "D401", "D404", "D406", "D407",
    "D408", "D409", "D413",
]
per-file-ignores = {"**/{tests}/*" = ["F841", "D", "E501"]}

[tool.ruff.format]
docstring-code-format = true
