[tool.poetry]
name = "locust-socketdock"
version = "0.1.0a0"
description = "Locust test for Socketdock"
authors = [
	"Sam Curren <telegramsam@gmail.com>",
	"Colton Wolkins (Indicio work address) <colton@indicio.tech>",
    "Micah Peltier <micah@indicio.tech>",
    "Daniel Bluhm <dbluhm@pm.me>",
    "Kim Ebert <kim@indicio.tech>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
aiohttp = "^3.8.4"
sanic = "^22.12.0"
locust = "2.14.2"
flask = "^2.3.2"
websocket-client = "^1.6.1"

[tool.poetry.group.dev.dependencies]
black = "^22"
flake8 = "^5"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
